--- a/blog_frontend/package.json
+++ b/blog_frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "browserify": "^16.2.2",
     "live-server": "^1.2.0",
+    "run-all": "^1.0.1",
     "watchify": "^3.11.0"
   }
 }
